# lid-driven-cavity-gpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  results.h5
benchmark/: benchmark.ipynb  project_report.tex
benchmark/results/: lidDriven_DSS_RF_004_result.h5  lidDriven_DSS_RF_006_result.h5  lidDriven_DSS_RF_008_result.h5  lidDriven_DSS_RF_012_result.h5  lidDriven_DSS_RF_014_result.h5  lidDriven_DSS_RF_016_result.h5  lidDriven_DSS_RF_018_result.h5  lidDriven_DSS_RF_01_result.h5  lidDriven_DSS_RF_02_result.h5  lidDriven_DSS_SparseLUWrapper_004_result.h5  lidDriven_DSS_SparseLUWrapper_006_result.h5  lidDriven_DSS_SparseLUWrapper_008_result.h5  lidDriven_DSS_SparseLUWrapper_012_result.h5  lidDriven_DSS_SparseLUWrapper_014_result.h5  lidDriven_DSS_SparseLUWrapper_016_result.h5  lidDriven_DSS_SparseLUWrapper_018_result.h5  lidDriven_DSS_SparseLUWrapper_01_result.h5  lidDriven_DSS_SparseLUWrapper_02_result.h5  lidDriven_QR_SparseLUWrapper_004_result.h5  lidDriven_QR_SparseLUWrapper_006_result.h5  lidDriven_QR_SparseLUWrapper_008_result.h5  lidDriven_QR_SparseLUWrapper_012_result.h5  lidDriven_QR_SparseLUWrapper_014_result.h5  lidDriven_QR_SparseLUWrapper_016_result.h5  lidDriven_QR_SparseLUWrapper_018_result.h5  lidDriven_QR_SparseLUWrapper_01_result.h5  lidDriven_QR_SparseLUWrapper_02_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_004_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_006_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_008_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_012_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_014_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_016_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_018_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_01_result.h5  lidDriven_SparseLUWrapper_SparseLUWrapper_02_result.h5  lidDriven_lidDrivenACMSYCL_004_result.h5  lidDriven_lidDrivenACMSYCL_006_result.h5  lidDriven_lidDrivenACMSYCL_008_result.h5  lidDriven_lidDrivenACMSYCL_012_result.h5  (+68 more)
params/: chanelFlow.xml  chanelFlowACM.xml
report/: report.tex
scripts/: basicVis.py
src/: lidDriven.cpp  lidDrivenDSSGPU.cpp  lidDrivenDSSRFGPU.cpp  lidDrivenGPU.cpp  lidDrivenIterativeGPU.cu  lidDrivenMatrixACM.cpp  lidDrivenMatrixACMGPU.cu
src/cpu/: CMakeLists.txt  lidDrivenACM.cpp  lidDrivenMatrixACM.cpp
src/cuda/: CMakeLists.txt  lidDriven.cpp
src/cuda/solvers/: solverDSS.hpp  solverRF.hpp
src/solvers/: solverQR.hpp  sparseluwrapper.hpp
src/sycl/: CMakeLists.txt  lidDrivenACMSYCL.cpp
